Fixed button alignment

--- a/styles.css
+++ b/styles.css
@@ -9,13 +9,42 @@
 }
 
 .subject_name {
-    white-space: nowrap;
-    overflow-x: auto;
+    font-size: large;
+    font-weight: bold;
+    margin-right: 15px; 
+    line-height: 3;
+    display: inline-block;
 }
 
 .subject_add {
-    all: initial;
-
-    display:inline-block;
+    font-size: medium;
+    width: 30px;
+    height: 30px;
     
+    background-color: var(--interactive-accent)!important;
+
+    color: var(--text-normal);
+    font-weight: bolder;
+    text-align: center;
+
+    padding: 0;
+    box-shadow: none;
+    margin: none;
+
+    border-width: 0px;
+    border-color: var(--text-normal)!important;
+    border-radius: 25%;
+}
+
+.subject_add:hover {  
+    box-shadow: none;
+    background-color: var(--interactive-accent-hover)!important;
+}
+
+.task_checkbox {
+    border-radius: 50%;
+    vertical-align: middle;
+    border: 1px var(--text-normal);
+    cursor: pointer;
+    padding: 0%;
 }
